--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.13.64",
-    "gatsby-image": "^2.2.8",
+    "gatsby-image": "^2.2.20",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-plugin-typography": "^2.3.3",
     "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-source-instagram": "^0.5.1",
+    "gatsby-source-instagram-all": "^2.0.5",
     "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
